fix header alignment issue when not logged in

--- a/src/blocks/header/__text/_auth/header__text_auth.css
+++ b/src/blocks/header/__text/_auth/header__text_auth.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 625px){
+  .header__text_auth {
+    margin: 28px 30px 0 0;
+  }
+}
 @media screen and (max-width: 480px){
   .header__text_auth {
     font-size: 14px;
