--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -8,6 +8,5 @@
 @media screen and (max-width: 625px){
   .header {
     width: 100%;
-    flex-direction: column;
   }
 }
