--- a/src/blocks/logo/logo.css
+++ b/src/blocks/logo/logo.css
@@ -8,6 +8,6 @@
   .logo {
     width: 126px;
     height: 24px;
-    margin: 0 167px 32px 27px;
+    margin: 0 0 32px 27px;
   }
 }
